MCUboot support in example

--- a/prj.conf
+++ b/prj.conf
@@ -23,3 +23,8 @@ CONFIG_MIRAMESH=y
 CONFIG_MIRAMESH_INTEGRATION_VERIFICATION_LOG=n
 CONFIG_MIRAMESH_INTEGRATION_VERIFICATION_LOG_PACKETS=n
 CONFIG_MIRAMESH_INTEGRATION_VERIFICATION_LOG_EVENTS=n
+
+# Bootloader config:
+CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_MCUBOOT_BOOTLOADER_MODE_OVERWRITE_ONLY=y
+CONFIG_MCUBOOT_BOOTLOADER_NO_DOWNGRADE=y
