Add custom mira fota driver

--- a/prj.conf
+++ b/prj.conf
@@ -2,12 +2,17 @@ CONFIG_MPSL=y
 CONFIG_MPSL_TIMESLOT_SESSION_COUNT=2
 CONFIG_RING_BUFFER=y
 CONFIG_LOG=y
+CONFIG_LOG_BACKEND_SHOW_COLOR=n
+CONFIG_LOG_MODE_MINIMAL=y
 
 #Asserts should only be activated for development
 #Turning it off saves ~15kB flash
 CONFIG_ASSERT=y
 CONFIG_ASSERT_LEVEL=2
 
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
 CONFIG_FPU=y
 CONFIG_FP_HARDABI=y
 CONFIG_POSIX_API=y
@@ -23,6 +28,8 @@ CONFIG_MIRAMESH=y
 CONFIG_MIRAMESH_INTEGRATION_VERIFICATION_LOG=n
 CONFIG_MIRAMESH_INTEGRATION_VERIFICATION_LOG_PACKETS=n
 CONFIG_MIRAMESH_INTEGRATION_VERIFICATION_LOG_EVENTS=n
+CONFIG_MIRA_FOTA_INIT=n
+CONFIG_MIRA_FOTA_LOGGING=n
 
 # Bootloader config:
 CONFIG_BOOTLOADER_MCUBOOT=y
