--- a/west.yml
+++ b/west.yml
@@ -14,6 +14,6 @@ manifest:
       remote: miramesh-zephyr
       repo-path: miramesh-zephyr
       path: modules/miramesh-zephyr
-      revision: main
+      revision: miramesh-2.9.0-ncs-v2.5.0
   self:
     path: miramesh-network-example
