--- a/prj.conf
+++ b/prj.conf
@@ -1,5 +1,6 @@
 CONFIG_MPSL=y
-CONFIG_MPSL_TIMESLOT_SESSION_COUNT=2
+# 1 for NVM access, 1 for MiraMesh, 1 for Softdevice
+CONFIG_MPSL_TIMESLOT_SESSION_COUNT=3
 CONFIG_RING_BUFFER=y
 CONFIG_LOG=y
 CONFIG_LOG_BACKEND_SHOW_COLOR=n
@@ -18,7 +19,7 @@ CONFIG_FP_HARDABI=y
 CONFIG_POSIX_API=y
 CONFIG_EVENTS=y
 CONFIG_POLL=y
-CONFIG_HEAP_MEM_POOL_SIZE=15000
+CONFIG_HEAP_MEM_POOL_SIZE=20000
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_ENTROPY_DEVICE_RANDOM_GENERATOR=y
 CONFIG_SCHED_MULTIQ=y
@@ -31,7 +32,8 @@ CONFIG_MIRAMESH_INTEGRATION_VERIFICATION_LOG_EVENTS=n
 CONFIG_MIRA_FOTA_INIT=n
 CONFIG_MIRA_FOTA_LOGGING=n
 
-# Bootloader config:
-CONFIG_BOOTLOADER_MCUBOOT=y
-CONFIG_MCUBOOT_BOOTLOADER_MODE_OVERWRITE_ONLY=y
 CONFIG_MCUBOOT_BOOTLOADER_NO_DOWNGRADE=y
+CONFIG_MCUBOOT_BOOTLOADER_MODE_OVERWRITE_ONLY=y
+
+# Interrupt config
+CONFIG_SHARED_INTERRUPTS=y
